# PAIDEIA-codex

./: .gitignore  README.ko.md  README.md  RELEASE_NOTES.md
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
plugins/paideia/: .mcp.json
plugins/paideia/.codex-plugin/: plugin.json
plugins/paideia/paideia-mcp/: README.md  pyproject.toml
plugins/paideia/paideia-mcp/paideia_mcp/: __init__.py  analyze.py  bootstrap.py  grade.py  ingest.py  phase.py  server.py
plugins/paideia/paideia-mcp/paideia_mcp/ocr/: __init__.py  openai_vision.py  qwen3vl.py  tesseract.py
plugins/paideia/paideia-mcp/tests/: test_analyze.py  test_bootstrap.py  test_ingest.py  test_mcp_bootstrap.py  test_ocr_tesseract.py  test_phase.py
plugins/paideia/skills/paideia-alt/: SKILL.md
plugins/paideia/skills/paideia-analyze/: SKILL.md
plugins/paideia/skills/paideia-blind/: SKILL.md
plugins/paideia/skills/paideia-chain/: SKILL.md
plugins/paideia/skills/paideia-cheatsheet/: SKILL.md
plugins/paideia/skills/paideia-derive/: SKILL.md
plugins/paideia/skills/paideia-grade/: SKILL.md
plugins/paideia/skills/paideia-hwmap/: SKILL.md
plugins/paideia/skills/paideia-ingest/: SKILL.md
plugins/paideia/skills/paideia-init-course/: SKILL.md
plugins/paideia/skills/paideia-mock/: SKILL.md
plugins/paideia/skills/paideia-pattern/: SKILL.md
plugins/paideia/skills/paideia-phase/: SKILL.md
plugins/paideia/skills/paideia-quiz/: SKILL.md
plugins/paideia/skills/paideia-twin/: SKILL.md
plugins/paideia/skills/paideia-weakmap/: SKILL.md
(+3 files in other folders)
